MyWorkspace/.metadata/.plugins/org.eclipse.cdt.ui/002LED_Tasks.build.log
21:32:05 **** Incremental Build of configuration Debug for project 002LED_Tasks ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/include" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/Config" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/OS" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/SEGGER" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/include" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/Config" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/OS" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/SEGGER" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_hal_msp.d" -MT"Core/Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_hal_msp.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_hal_timebase_tim.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/include" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/Config" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/OS" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/SEGGER" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_hal_timebase_tim.d" -MT"Core/Src/stm32f4xx_hal_timebase_tim.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_hal_timebase_tim.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/include" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/Config" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/OS" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/SEGGER" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/include" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/Config" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/OS" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/SEGGER" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/include" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/Config" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/OS" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/SEGGER" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/include" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/Config" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/OS" -I"C:/Users/ridel/Documents/CareerDevelopment/Embedded/06FreeRTOS/MyWorkspace/common/ThirdParty/SEGGER/SEGGER" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
../Core/Src/main.c:374:36: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
  374 | void HAL_TIM_PeriodElapsedCallback(TIM_HandleTypeDef *htim)
      |                                    ^~~~~~~~~~~~~~~~~
      |                                    HCD_HandleTypeDef
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

21:32:06 Build Failed. 3 errors, 0 warnings. (took 934ms)

